--- a/.github/workflows/check_certs.yml
+++ b/.github/workflows/check_certs.yml
@@ -28,7 +28,32 @@ jobs:
       - name: Install dependencies
         run: bundle install
 
-      - name: Check Certificates and create or renew if needed
+      # Create or update provisioning profiles
+      - name: Check profiles
+        run: |
+          echo "Running Fastlane certs lane..."
+          bundle exec fastlane certs 2>&1 | tee output.log
+
+          # Check Fastlane output and annotate
+          if grep -q "Provisioning profiles are valid and up-to-date" output.log; then
+            echo "::notice title=Provisioning Profiles::All profiles are valid and up-to-date."
+          elif grep -q "Profiles are out of sync or invalid. Updating..." output.log; then
+            echo "::notice title=Provisioning Profiles::Profiles were out of sync and have been updated."
+          elif grep -q "Provisioning profiles have been updated." output.log; then
+            echo "::notice title=Provisioning Profiles::Profiles have been successfully updated."
+          else
+            echo "::notice title=Provisioning Profiles::Completed, but no specific action could be determined."
+          fi
+
+        env:
+          TEAMID: ${{ secrets.TEAMID }}
+          GH_PAT: ${{ secrets.GH_PAT }}
+          MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
+          FASTLANE_KEY_ID: ${{ secrets.FASTLANE_KEY_ID }}
+          FASTLANE_ISSUER_ID: ${{ secrets.FASTLANE_ISSUER_ID }}
+          FASTLANE_KEY: ${{ secrets.FASTLANE_KEY }}
+
+      - name: Check Distribution Certificate and create or renew if needed
         run: bundle exec fastlane check_and_renew_certificates
         id: check_certs
 
