Fastlane needs macos, not ubuntu runner

--- a/.github/workflows/check_certs.yml
+++ b/.github/workflows/check_certs.yml
@@ -15,7 +15,7 @@ env:
 
 jobs:
   check_certs:
-    runs-on: ubuntu-latest
+    runs-on: macos-14
     outputs:
       new_certificate_needed: ${{ steps.set_output.outputs.new_certificate_needed }}
 
