--- a/.github/workflows/check_certs.yml
+++ b/.github/workflows/check_certs.yml
@@ -14,6 +14,11 @@ env:
   FASTLANE_KEY: ${{ secrets.FASTLANE_KEY }}
 
 jobs:
+  validate:
+    name: Validate
+    uses: ./.github/workflows/validate_secrets.yml
+    secrets: inherit
+
   check_certs:
     runs-on: macos-14
     outputs:
@@ -95,40 +100,37 @@ jobs:
 
   # Nuke Certs if needed, and if the repository variable ENABLE_NUKE_CERTS is set to 'true', or if FORCE_NUKE_CERTS is set to 'true', which will always force certs to be nuked
   nuke_certs:
-    needs: check_certs
-    runs-on: macos-14
-    if: ${{ (needs.check_certs.outputs.new_certificate_needed == 'true' && vars.ENABLE_NUKE_CERTS == 'true') || vars.FORCE_NUKE_CERTS == 'true' }}
-    steps:
-      - name: Debug check_certs output
-        run: echo "new_certificate_needed=${{ needs.check_certs.outputs.new_certificate_needed }}"
+      needs: check_certs
+      runs-on: macos-14
+      if: ${{ (needs.check_certs.outputs.new_certificate_needed == 'true' && vars.ENABLE_NUKE_CERTS == 'true') || vars.FORCE_NUKE_CERTS == 'true' }}
+      steps:
+        - name: Output from Check_certs
+          run: echo "new_certificate_needed=${{ needs.check_certs.outputs.new_certificate_needed }}"
 
-      - name: Checkout repository
-        uses: actions/checkout@v4
+        - name: Checkout repository
+          uses: actions/checkout@v4
 
-      - name: Install dependencies
-        run: bundle install
+        - name: Install dependencies
+          run: bundle install
 
-      - name: Run Fastlane nuke_certs
-        run: bundle exec fastlane nuke_certs
+        - name: Run Fastlane nuke_certs
+          run: |
+            set -e
+            bundle exec fastlane nuke_certs
 
-      - name: Annotate Summary after Nuke
-        run: |
-          echo "::warning::⚠️⚠️⚠️   All Distribution certificates and TestFlight profiles have been revoked."
-    
+        - name: Add warning annotations for nuke_certs
+          if: ${{ success() }}
+          run: |
+            echo "::warning::⚠️⚠️⚠️ All Distribution certificates and TestFlight profiles have been revoked."
 
-  # Trigger create_certs.yml if nuke_certs ran
-  trigger_create_certs:
-    needs: [check_certs, nuke_certs]
-    uses: ./.github/workflows/create_certs.yml
-    secrets: inherit
+        - name: Recreate Distribution certificate after nuking
+          run: |
+            set -e
+            bundle exec fastlane certs
 
-  # Annotate Summary after Certificate Creation
-  annotate_summary:
-    needs: trigger_create_certs
-    runs-on: ubuntu-latest
-    steps:
-      - name: Annotate Summary
-        run: |
-          echo "::warning::⚠️⚠️⚠️   Certificates have been recreated successfully."
-          echo "::warning::⚠️⚠️⚠️   If you have other apps being distributed by GitHub Actions / Fastlane / TestFlight, please run the '3. Create Certificates' workflow for each of these apps to allow these apps to be built."
-          echo "::warning::✅✅✅   But don't worry about your existing TestFlight builds, they will keep working!"
+        - name: Add success annotations for certificate recreation
+          if: ${{ success() }}
+          run: |
+            echo "::warning::⚠️⚠️⚠️ Certificates have been recreated successfully."
+            echo "::warning::❗️❗️❗️ If you have other apps being distributed by GitHub Actions / Fastlane / TestFlight that does not renew certificates automatically, please run the '3. Create Certificates' workflow for each of these apps to allow these apps to be built."
+            echo "::warning::✅✅✅ But don't worry about your existing TestFlight builds, they will keep working!"
