--- a/.github/workflows/check_certs.yml
+++ b/.github/workflows/check_certs.yml
@@ -101,7 +101,7 @@ jobs:
 
   # Nuke Certs if needed, and if the repository variable ENABLE_NUKE_CERTS is set to 'true', or if FORCE_NUKE_CERTS is set to 'true', which will always force certs to be nuked
   nuke_certs:
-      needs: check_certs
+      needs: [validate, check_certs]
       runs-on: macos-14
       if: ${{ (needs.check_certs.outputs.new_certificate_needed == 'true' && vars.ENABLE_NUKE_CERTS == 'true') || vars.FORCE_NUKE_CERTS == 'true' }}
       steps:
