--- a/.github/workflows/create_certs.yml
+++ b/.github/workflows/create_certs.yml
@@ -1,5 +1,5 @@
-name: 3. Check Certificates
-run-name: Check Certificates (${{ github.ref_name }})
+name: 3. Create Certificates
+run-name: Check and Create Certificates (${{ github.ref_name }})
 
 on: [workflow_call, workflow_dispatch]
 
