--- a/.github/workflows/create_certs.yml
+++ b/.github/workflows/create_certs.yml
@@ -1,5 +1,5 @@
 name: 3. Create Certificates
-run-name: Check and Create Certificates (${{ github.ref_name }})
+run-name: Create Certificates (${{ github.ref_name }})
 
 on: [workflow_call, workflow_dispatch]
 
@@ -18,7 +18,7 @@ jobs:
     uses: ./.github/workflows/validate_secrets.yml
     secrets: inherit
 
-  check_certs:
+  create_certs:
     name: Check certificates
     needs: validate
     runs-on: macos-14
@@ -86,12 +86,12 @@ jobs:
   # Nuke Certs if needed, and if the repository variable ENABLE_NUKE_CERTS is set to 'true', or if FORCE_NUKE_CERTS is set to 'true', which will always force certs to be nuked
   nuke_certs:
       name: Nuke certificates
-      needs: [validate, check_certs]
+      needs: [validate, create_certs]
       runs-on: macos-14
-      if: ${{ (needs.check_certs.outputs.new_certificate_needed == 'true' && vars.ENABLE_NUKE_CERTS == 'true') || vars.FORCE_NUKE_CERTS == 'true' }}
+      if: ${{ (needs.create_certs.outputs.new_certificate_needed == 'true' && vars.ENABLE_NUKE_CERTS == 'true') || vars.FORCE_NUKE_CERTS == 'true' }}
       steps:
-        - name: Output from Check_certs
-          run: echo "new_certificate_needed=${{ needs.check_certs.outputs.new_certificate_needed }}"
+        - name: Output from step id 'check_certs'
+          run: echo "new_certificate_needed=${{ needs.create_certs.outputs.new_certificate_needed }}"
 
         - name: Checkout repository
           uses: actions/checkout@v4
@@ -101,12 +101,12 @@ jobs:
 
         - name: Run Fastlane nuke_certs
           run: |
-            set -e
+            set -e # Set error immediately after this step if error occurs
             bundle exec fastlane nuke_certs
 
         - name: Recreate Distribution certificate after nuking
           run: |
-            set -e
+            set -e # Set error immediately after this step if error occurs
             bundle exec fastlane certs
 
         - name: Add success annotations for nuke and certificate recreation
