create_certs.yml job create_certs: name: Certificates

--- a/.github/workflows/create_certs.yml
+++ b/.github/workflows/create_certs.yml
@@ -19,7 +19,7 @@ jobs:
     secrets: inherit
 
   create_certs:
-    name: Check certificates
+    name: Certificates
     needs: validate
     runs-on: macos-14
     outputs:
